{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 65,
  "lineage": "e47af94f-f46f-b052-215f-c1c17b355e1a",
  "resources": [
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0dd16b9185b175bdf",
            "public_dns": "ec2-54-194-245-110.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.245.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bmutziu-vpc-0-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:internet-gateway/igw-00c98f38c86ad6a21",
            "id": "igw-00c98f38c86ad6a21",
            "owner_id": "947342103870",
            "tags": {
              "Name": "bmutziu-vpc-0"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd16b9185b175bdf",
            "id": "nat-016a08a3f4624d400",
            "network_interface_id": "eni-0dc493b4db0ca0911",
            "private_ip": "10.50.1.227",
            "public_ip": "54.194.245.110",
            "subnet_id": "subnet-0db30bbb0bae0f4fe",
            "tags": {
              "Name": "bmutziu-vpc-0-eu-west-1a"
            }
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ce59254ae418293e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-016a08a3f4624d400",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce59254ae418293e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00c98f38c86ad6a21",
            "id": "r-rtb-06277282b76d571d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06277282b76d571d8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce59254ae418293e",
            "owner_id": "947342103870",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bmutziu-vpc-0-private"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06277282b76d571d8",
            "owner_id": "947342103870",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bmutziu-vpc-0-public"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe3e14b02fd937fa",
            "route_table_id": "rtb-0ce59254ae418293e",
            "subnet_id": "subnet-0e1b7c3f8aacc4759"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6b888d616222fc4",
            "route_table_id": "rtb-0ce59254ae418293e",
            "subnet_id": "subnet-09a7a1dfc4792afe1"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f726f13b4a24085a",
            "route_table_id": "rtb-0ce59254ae418293e",
            "subnet_id": "subnet-02757ebf5a22c74b8"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07169a9e6350db7cf",
            "route_table_id": "rtb-06277282b76d571d8",
            "subnet_id": "subnet-0db30bbb0bae0f4fe"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058b53a823539bdf7",
            "route_table_id": "rtb-06277282b76d571d8",
            "subnet_id": "subnet-0b56cc0e806d75f0f"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa1f524ed791f403",
            "route_table_id": "rtb-06277282b76d571d8",
            "subnet_id": "subnet-073349d9494d44e54"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:subnet/subnet-0e1b7c3f8aacc4759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.50.16.0/20",
            "id": "subnet-0e1b7c3f8aacc4759",
            "map_public_ip_on_launch": false,
            "owner_id": "947342103870",
            "tags": {
              "Name": "bmutziu-vpc-0-private-eu-west-1a",
              "kubernetes.io/cluster/cluster1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:subnet/subnet-09a7a1dfc4792afe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.50.32.0/20",
            "id": "subnet-09a7a1dfc4792afe1",
            "map_public_ip_on_launch": false,
            "owner_id": "947342103870",
            "tags": {
              "Name": "bmutziu-vpc-0-private-eu-west-1b",
              "kubernetes.io/cluster/cluster1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:subnet/subnet-02757ebf5a22c74b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.50.48.0/20",
            "id": "subnet-02757ebf5a22c74b8",
            "map_public_ip_on_launch": false,
            "owner_id": "947342103870",
            "tags": {
              "Name": "bmutziu-vpc-0-private-eu-west-1c",
              "kubernetes.io/cluster/cluster1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:subnet/subnet-0db30bbb0bae0f4fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.50.0.0/22",
            "id": "subnet-0db30bbb0bae0f4fe",
            "map_public_ip_on_launch": true,
            "owner_id": "947342103870",
            "tags": {
              "Name": "bmutziu-vpc-0-public-eu-west-1a",
              "kubernetes.io/cluster/cluster1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:subnet/subnet-0b56cc0e806d75f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.50.4.0/22",
            "id": "subnet-0b56cc0e806d75f0f",
            "map_public_ip_on_launch": true,
            "owner_id": "947342103870",
            "tags": {
              "Name": "bmutziu-vpc-0-public-eu-west-1b",
              "kubernetes.io/cluster/cluster1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:subnet/subnet-073349d9494d44e54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.50.8.0/22",
            "id": "subnet-073349d9494d44e54",
            "map_public_ip_on_launch": true,
            "owner_id": "947342103870",
            "tags": {
              "Name": "bmutziu-vpc-0-public-eu-west-1c",
              "kubernetes.io/cluster/cluster1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-058cc6a155bfcd98c"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:947342103870:vpc/vpc-058cc6a155bfcd98c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0476aa06375f5e527",
            "default_route_table_id": "rtb-0b898ed6a733d13b0",
            "default_security_group_id": "sg-04717c0097f5e1da1",
            "dhcp_options_id": "dopt-ec423588",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-058cc6a155bfcd98c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b898ed6a733d13b0",
            "owner_id": "947342103870",
            "tags": {
              "Name": "bmutziu-vpc-0"
            }
          }
        }
      ]
    }
  ]
}